--- a/app/main.html
+++ b/app/main.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Electron Boilerplate Vue</title>
+    <head>
+        <meta charset="utf-8">
+        <title>Electron Boilerplate Vue</title>
 
-    <script src="static/electron_boilerplate/context_menu.js"></script>
-    <script src="static/electron_boilerplate/external_links.js"></script>
-  </head>
-  <body>
-    <app></app>
-    <!-- built files will be auto injected -->
-  </body>
+        <script src="static/electron_boilerplate/context_menu.js"></script>
+        <script src="static/electron_boilerplate/external_links.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="./node_modules/evil-icons/assets/evil-icons.css">
+    </head>
+    <body>
+        <app></app>
+        <!-- built files will be auto injected -->
+    </body>
 </html>
