ading structure and a list of user repos

--- a/app/main.html
+++ b/app/main.html
@@ -8,6 +8,7 @@
         <script src="static/electron_boilerplate/external_links.js"></script>
 
         <link rel="stylesheet" type="text/css" href="./node_modules/evil-icons/assets/evil-icons.css">
+        <link rel="stylesheet" type="text/css" href="static/photon.css">
     </head>
     <body>
         <app></app>
